--- a/学习总结.md
+++ b/学习总结.md
@@ -18,7 +18,7 @@
 模型预训练技巧
 1、全词mask(wwm)，通过统计常在一起token的概率，找到全词；
 
-2、n-gram(掩码)，但是看到前排大佬使用了n-gram混合掩码，采用1、2、3-gram混合掩码；
+2、使用了n-gram混合掩码，采用1、2、3-gram混合掩码；
 
 3、pair对数据与单句数据一起预训练；
 
